--- a/Deutsch_Algorithm.ipynb
+++ b/Deutsch_Algorithm.ipynb
@@ -60,20 +60,10 @@
         "| 1 |  1   |    | 1 |  0   |\n",
         "```\n",
         "Our goal is to find out whether the function 𝑓(𝑥)  is **constant or balanced**?\n",
-        "In classical computing, determining whether\n",
-        "𝑓\n",
-        "(\n",
-        "𝑥\n",
-        ")\n",
+        "In classical computing, determining whether𝑓(𝑥)
         "is constant (same output for all inputs) or balanced (different outputs for each input) would require two evaluations: one for\n",
-        "𝑥\n",
-        "=\n",
-        "0\n",
-        "and one for\n",
-        "𝑥\n",
-        "=\n",
-        "1\n",
-        ".\n",
+        "x = 0,
+        "and one for x=1.
         "\n",
         "**Learning Goals:**\n",
         "This tuotorial aims at the students who are staring their quantum computing\n",
